cloud img not showing issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 .header {
-   color: "white";
-  margin-top: "30px" ;}
+  margin-top: "30px" ;
+  color: white;
+}
 
